@@ -59,6 +59,7 @@ import com.openexchange.data.conversion.ical.ConversionWarning;
 import com.openexchange.data.conversion.ical.Mode;
 import com.openexchange.data.conversion.ical.SimpleMode;
 import com.openexchange.data.conversion.ical.ZoneInfo;
+import com.openexchange.data.conversion.ical.itip.ITipContainer;
 import com.openexchange.data.conversion.ical.itip.ITipEmitter;
 import com.openexchange.data.conversion.ical.itip.ITipMessage;
 import com.openexchange.data.conversion.ical.itip.ITipMethod;
@@ -84,7 +85,8 @@ public class ICal4JITipEmitter extends ICal4JEmitter implements ITipEmitter {
         VEvent event = null;
         if (message.getAppointment() != null) {
         	appt = message.getAppointment();
-        	event = createEvent(mode, 0, message.getAppointment(), ctx, errors, warnings);
+        	ITipContainer itip = new ITipContainer(message.getMethod(), null, -1);
+        	event = createEvent(mode, 0, message.getAppointment(), ctx, errors, warnings, itip);
             if (message.getComment() != null && !message.getComment().trim().equals("")) {
                 event.getProperties().add(new Comment(message.getComment()));
                 consumedComment = true;
