@@ -202,7 +202,6 @@ public final class AppointmentConverters {
         tmp.add(verifyingDuration);
         tmp.add(klass);
         tmp.add(location);
-        tmp.add(transparency);
         tmp.add(categories);
         tmp.add(recurrence);
         tmp.add(deleteExcetions);
@@ -229,7 +228,6 @@ public final class AppointmentConverters {
         tmp.add(duration);
         tmp.add(klass);
         tmp.add(location);
-        tmp.add(transparency);
         tmp.add(categories);
         tmp.add(recurrence);
         tmp.add(deleteExcetions);
@@ -256,7 +254,6 @@ public final class AppointmentConverters {
         tmp.add(duration);
         tmp.add(klass);
         tmp.add(location);
-        tmp.add(transparency);
         tmp.add(categories);
         tmp.add(recurrence);
         tmp.add(deleteExcetions);
